Fixed z-index issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -183,3 +183,7 @@ blockquote {
 .row{
     margin: 0 !important;
 }
+
+modal-container{
+    z-index: 10000 !important;
+}
